--- a/src/app/ui/styles/Landing.module.css
+++ b/src/app/ui/styles/Landing.module.css
@@ -23,6 +23,13 @@
 }
 
 
+@media (max-width: 850px){
+  .landing{
+    padding-top: 50px;
+    background-size: cover;
+  }
+}
+
 
 .belowHeader{
   background-color: #e9ebec;
@@ -98,6 +105,7 @@
 
 /* --- Text Background (Glass container) --- */
 .textBackground {
+  width: 10px;
     position: relative;
     padding: 30px;
     border-radius: 20px;
@@ -136,13 +144,13 @@
   left: -50%;
   width: 200%;
   height: 200%;
-  background: repeating-linear-gradient(
+  /* background: repeating-linear-gradient(
     45deg,
     rgba(255, 255, 255, 0.05),
     rgba(255, 255, 255, 0.05) 10px,
     rgba(0, 0, 0, 0.05) 10px,
     rgba(0, 0, 0, 0.05) 20px
-  );
+  ); */
   animation: moveZigzag 10s linear infinite;
   z-index: 0;
 }
@@ -157,9 +165,9 @@
 /* responsive adjustments */
 @media (max-width: 900px) {
   .hero {
-    flex-direction: column-reverse;
-    gap: 40px;
+    /* flex-direction: column-reverse; */
     padding: 60px 20px;
+
   }
 
   .heroTitle {
@@ -179,6 +187,10 @@
 
 /* Slide-in and slide-out animations */
 .slideIn {
+  display: flex;
+  /* margin-left: 20px ; */
+  align-items: center;
+  /* height: 300px; */
   transform: translateX(0);
   opacity: 1;
   transition: transform 0.5s ease, opacity 0.5s ease;
