--- a/src/app/ui/styles/category.module.css
+++ b/src/app/ui/styles/category.module.css
@@ -8,6 +8,8 @@
   font-family: system-ui, -apple-system, sans-serif;
 }
 
+
+
 .title {
   font-size: 2rem;
   font-weight: 700;
@@ -142,4 +144,15 @@
 .errorText {
   color: #ef4444;
   font-size: 1.1rem;
+}
+
+@media (max-width: 850px){
+  .container{
+    margin: 0px 30px;
+    padding-top: 0px;
+  }
+  .title{
+    font-size: 1.5em;
+  }
+
 }
