--- a/src/app/ui/styles/arrivals.module.css
+++ b/src/app/ui/styles/arrivals.module.css
@@ -184,7 +184,7 @@
 @media (max-width: 850px){
   .container{
     margin: 0px 30px;
-    padding-top: 0px;
+    /* padding-top: 0px; */
   }
   .title{
     font-size: 1.5em;
