--- a/src/app/ui/styles/hot-sale.module.css
+++ b/src/app/ui/styles/hot-sale.module.css
@@ -52,11 +52,12 @@ box-shadow: 0 10px 20px rgba(255,0,0,0.4);
   display: grid;
   /* Responsive grid layout */
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 
 /* --- Card Styling --- */
 .card {
+  margin: 10%;
   background: white;
   border: 1px solid var(--border-light);
   border-radius: 12px;
@@ -64,6 +65,7 @@ box-shadow: 0 10px 20px rgba(255,0,0,0.4);
   display: flex;
   flex-direction: column;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
+  width: 75%;
   position: relative; /* Needed for absolute positioning of status tags */
 }
 
