--- a/src/app/ui/styles/specials.module.css
+++ b/src/app/ui/styles/specials.module.css
@@ -9,7 +9,8 @@
 }
 
 .title {
-  font-size: 2.5rem;
+  padding-top: 20px;
+  font-size: 1.5rem;
   font-weight: 800;
   margin-bottom: 2rem;
   color: #c52919; /* Sale color */
@@ -20,6 +21,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1.5rem;
+  margin: 0 30px;
 }
 
 .card {
